--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </div>
       <nav class="nav" role="navigation" aria-label="Main navigation">
         <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
       </nav>
@@ -28,22 +29,7 @@
       <a class="btn" href="services.html">Learn more</a>
     </div>
     <div class="hero-right" aria-hidden="true">
-      <!-- SVG chip illustration -->
-      <svg class="chip-svg" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Circuit illustration">
-        <rect x="54" y="54" width="92" height="92" rx="12" fill="#fff" stroke="#007BFF" stroke-width="6"/>
-        <rect x="74" y="74" width="52" height="52" rx="6" fill="#0A2540"/>
-        <!-- pins -->
-        <g stroke="#007BFF" stroke-width="6" stroke-linecap="round" fill="none">
-          <path d="M28 80 L54 80" />
-          <path d="M28 110 L54 110" />
-          <path d="M172 80 L146 80" />
-          <path d="M172 110 L146 110" />
-          <path d="M100 28 L100 54" />
-          <path d="M100 172 L100 146" />
-          <path d="M40 40 L60 60" />
-          <path d="M160 160 L140 140" />
-        </g>
-      </svg>
+      <img src="assets/illustration.svg" alt="Electronics circuit illustration" style="max-width: 420px; height: auto;">
     </div>
   </main>
 
