Initial commit - embedEd Consulting Ltd website

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="assets/styles.css"></head>
 <body>
   <header class="header"><div class="header-inner"><div class="logo"><img src="assets/logo.png" alt="embedEd Consulting logo"></div>
-  <nav class="nav"><a href="index.html">Home</a><a href="services.html">Services</a><a href="contact.html">Contact</a></nav></div></header>
+  <nav class="nav"><a href="index.html">Home</a><a href="about.html">About</a><a href="services.html">Services</a><a href="contact.html">Contact</a></nav></div></header>
   <main style="max-width:var(--max-width);margin:40px auto;padding:0 24px">
     <h1 style="font-size:32px;color:var(--navy)">About embedEd Consulting Ltd</h1>
     <p style="color:var(--muted);font-size:16px;max-width:760px">
