Replaced SVG chip with new embedEd illustration

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p class="lead">embedEd Consulting designs and delivers high-quality electronic and embedded systems engineering curricula for FE and HE providers. We help institutions modernise programmes, upskill staff, and connect education with real-world engineering practice.</p>
       <a class="btn" href="services.html">Learn more</a>
     </div>
-    <div class="hero-right" aria-hidden="true">
+    <div class="hero-right">
       <img src="assets/illustration.svg" alt="Electronics circuit illustration" style="max-width: 420px; height: auto;">
     </div>
   </main>
