Fixed image reference for illustration

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a class="btn" href="services.html">Learn more</a>
     </div>
     <div class="hero-right">
-      <img src="assets/illustration.svg" alt="Electronics circuit illustration" style="max-width: 420px; height: auto;">
+      <img src="assets/illustration.png" alt="Electronics circuit illustration" style="max-width: 420px; height: auto;">
     </div>
   </main>
 
