--- a/services.html
+++ b/services.html
@@ -6,14 +6,75 @@
 <body>
   <header class="header"><div class="header-inner"><div class="logo"><img src="assets/logo.png" alt="embedEd Consulting logo"></div>
   <nav class="nav"><a href="index.html">Home</a><a href="about.html">About</a><a href="services.html">Services</a><a href="contact.html">Contact</a></nav></div></header>
-  <main style="max-width:var(--max-width);margin:40px auto;padding:0 24px">
-    <h1 style="font-size:32px;color:var(--navy)">Our Services</h1>
-    <ul style="color:var(--muted);font-size:16px;max-width:760px">
-      <li><strong>Curriculum Development</strong> — Design and modernisation of HNC, HND, and foundation degree programmes in electronics and embedded systems.</li>
-      <li><strong>Programme Validation & Review</strong> — Support with course validation, mapping, and quality enhancement.</li>
-      <li><strong>Lecturer Training & CPD</strong> — Bespoke workshops to build staff confidence in modern embedded systems, IoT, and digital electronics.</li>
-      <li><strong>Curriculum Delivery</strong> — Guest lecturing and short-course delivery in embedded systems design, programming, and hardware development.</li>
-    </ul>
+  <main class="container">
+    <section class="section">
+      <h2>Our Services</h2>
+      <p class="lead">embedEd Consulting offers specialist support to FE and HE providers in electronic and embedded systems education.</p>
+
+      <div class="services-grid">
+        <div class="card">
+          <div class="icon" aria-hidden="true">
+            <!-- chip svg -->
+            <svg width="26" height="26" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect x="6" y="6" width="12" height="12" rx="2" stroke="currentColor" stroke-width="1.5" fill="none"/>
+              <path d="M3 10H6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M3 14H6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M18 10H21" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M18 14H21" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+            </svg>
+          </div>
+          <div>
+            <h3>Curriculum Development</h3>
+            <p>Design and modernisation of HNC, HND, and foundation degree programmes in electronics and embedded systems.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="icon" aria-hidden="true">
+            <!-- waveform svg -->
+            <svg width="26" height="26" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M2 12h3l2-6 2 12 2-8 2 4 2-10 3 10 2-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+            </svg>
+          </div>
+          <div>
+            <h3>Programme Validation & Review</h3>
+            <p>Assistance with course validation, mapping, and quality enhancement to align programmes with industry needs.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="icon" aria-hidden="true">
+            <!-- training svg -->
+            <svg width="26" height="26" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M12 2v4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M6 8h12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <rect x="4" y="8" width="16" height="12" rx="2" stroke="currentColor" stroke-width="1.5" fill="none"/>
+              <path d="M9 12h6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+            </svg>
+          </div>
+          <div>
+            <h3>Lecturer Training & CPD</h3>
+            <p>Bespoke workshops to build staff confidence in modern embedded systems, IoT, and digital electronics.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="icon" aria-hidden="true">
+            <!-- delivery svg -->
+            <svg width="26" height="26" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M3 7h18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M5 11h14" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M7 15h10" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+            </svg>
+          </div>
+          <div>
+            <h3>Curriculum Delivery</h3>
+            <p>Guest lecturing and short-course delivery in embedded systems design, programming, and hardware development.</p>
+          </div>
+        </div>
+
+      </div>
+    </section>
   </main>
   <footer class="footer">© 2025 embedEd Consulting Ltd</footer>
 </body>
