Updated email address

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <main style="max-width:var(--max-width);margin:40px auto;padding:0 24px">
     <h1 style="font-size:32px;color:var(--navy)">Contact Us</h1>
     <p style="color:var(--muted);">For enquiries, collaborations, or to discuss curriculum projects, email:</p>
-    <p><a href="mailto:olubiyiolaoluwaakintade@gmail.com">olubiyiolaoluwaakintade@gmail.com</a></p>
+    <p><a href="mailto:contact@embededconsulting.co.uk">contact@embededconsulting.co.uk</a></p>
   </main>
   <footer class="footer">© 2025 embedEd Consulting Ltd</footer>
 </body>
