--- a/about.html
+++ b/about.html
@@ -1,27 +1,60 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>About — embedEd Consulting Ltd</title>
+  <head>
+    <title>About — embedEd Consulting Ltd</title>
 
-  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <!-- Temporary inline style to avoid flash before styles load -->
+    <style>
+      body { opacity: 0; transition: opacity .2s ease-in; }
+    </style>
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles.css">
-</head>
-<body>
-  <header class="header"><div class="header-inner"><div class="logo"><img src="assets/logo.png" alt="embedEd Consulting logo"></div>
-  <nav class="nav"><a href="index.html">Home</a><a href="about.html">About</a><a href="services.html">Services</a><a href="contact.html">Contact</a></nav></div></header>
-  <main style="max-width:var(--max-width);margin:40px auto;padding:0 24px">
-    <h1 style="font-size:32px;color:var(--navy)">About embedEd Consulting Ltd</h1>
-    <p style="color:var(--muted);font-size:16px;max-width:760px">
-embedEd Consulting Ltd was founded to bridge the gap between engineering education and modern embedded systems practice. We collaborate with FE and HE providers to design, validate, and deliver curricula that align with current and emerging technologies — ensuring graduates are ready for the real world of electronics and embedded systems engineering.
-    </p>
-    <h2 style="margin-top:28px;color:var(--navy)">Founder</h2>
-    <p style="color:var(--muted);max-width:760px">Dr. Olubiyi Akintade is an electronic and embedded systems engineer, educator, and consultant with extensive experience in both academia and industry. A former lecturer and electronic test engineer, he specialises in embedded systems development for WSN and IoT applications, and curriculum development. He holds a PhD in Electronic and Electrical Engineering and is a member of the IET.</p>
-  </main>
-  <footer class="footer">© 2025 embedEd Consulting Ltd</footer>
-</body>
+    <!-- Inject shared head content (favicon, fonts, CSS) -->
+    <script>
+      fetch("assets/head.html")
+        .then(response => response.text())
+        .then(data => {
+          document.head.insertAdjacentHTML("beforeend", data);
+        });
+    </script>
+  </head>
+
+  <body>
+    <header class="header">
+      <div class="header-inner">
+        <div class="logo">
+          <img src="assets/logo.png" alt="embedEd Consulting logo">
+        </div>
+        <nav class="nav">
+          <a href="index.html">Home</a>
+          <a href="about.html" class="active">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+        </nav>
+      </div>
+    </header>
+
+    <main style="max-width:var(--max-width);margin:40px auto;padding:0 24px">
+      <h1 style="font-size:32px;color:var(--navy)">About embedEd Consulting Ltd</h1>
+
+      <p style="color:var(--muted);font-size:16px;max-width:760px">
+        embedEd Consulting Ltd was founded to bridge the gap between engineering education and modern embedded systems practice. 
+        We collaborate with FE and HE providers to design, validate, and deliver curricula that align with current and emerging technologies — 
+        ensuring graduates are ready for the real world of electronics and embedded systems engineering.
+      </p>
+
+      <h2 style="margin-top:28px;color:var(--navy)">Founder</h2>
+      <p style="color:var(--muted);max-width:760px">
+        Dr. Olubiyi Akintade is an electronic and embedded systems engineer, educator, and consultant with extensive experience in both academia and industry. 
+        A former lecturer and electronic test engineer, he specialises in embedded systems development for WSN and IoT applications, and curriculum development. 
+        He holds a PhD in Electronic and Electrical Engineering and is a member of the IET.
+      </p>
+    </main>
+
+    <footer class="footer">© 2025 embedEd Consulting Ltd</footer>
+
+    <!-- Reveal page once fully loaded -->
+    <script>
+      window.addEventListener('load', () => document.body.style.opacity = 1);
+    </script>
+  </body>
 </html>
