--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>embedEd Consulting Ltd — Curricula for Electronics</title>
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles.css">
-</head>
-<body>
-  <header class="header" role="banner">
-    <div class="header-inner">
-      <div class="logo">
-        <img src="assets/logo.png" alt="embedEd Consulting logo">
+  <head>
+    <title>Home — embedEd Consulting Ltd</title>
+
+    <!-- Temporary inline style to avoid flash before styles load -->
+    <style>
+      body { opacity: 0; transition: opacity .2s ease-in; }
+    </style>
+
+    <!-- Inject shared head content (favicon, fonts, CSS) -->
+    <script>
+      fetch("assets/head.html")
+        .then(response => response.text())
+        .then(data => {
+          document.head.insertAdjacentHTML("beforeend", data);
+        });
+    </script>
+  </head>
+
+  <body>
+    <header class="header">
+      <div class="header-inner">
+        <div class="logo">
+          <img src="assets/logo.png" alt="embedEd Consulting logo">
+        </div>
+        <nav class="nav">
+          <a href="index.html">Home</a>
+          <a href="about.html" class="active">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+        </nav>
       </div>
-      <nav class="nav" role="navigation" aria-label="Main navigation">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
+    </header>
 
   <main class="hero" role="main">
     <div class="hero-left">
