--- a/index.html
+++ b/index.html
@@ -3,9 +3,57 @@
   <head>
     <title>Home — embedEd Consulting Ltd</title>
     <style>
-      body { opacity: 0; transition: opacity .2s ease-in; }
+      body { opacity: 0; transition: opacity 0.3s ease-in; font-family: 'Poppins', sans-serif; margin: 0; }
+      main {
+        text-align: center;
+        padding: 120px 20px;
+        max-width: 800px;
+        margin: 0 auto;
+      }
+      h1 {
+        color: #0a2342; /* navy blue */
+        font-size: 2.5rem;
+        margin-bottom: 12px;
+      }
+      p {
+        color: #555;
+        font-size: 1.1rem;
+        margin-bottom: 32px;
+        line-height: 1.6;
+      }
+      .btn {
+        display: inline-block;
+        background-color: #0a2342;
+        color: white;
+        padding: 12px 28px;
+        border-radius: 8px;
+        font-weight: 600;
+        text-decoration: none;
+        transition: background 0.3s ease;
+      }
+      .btn:hover {
+        background-color: #123b6c;
+      }
+      header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 24px;
+        border-bottom: 1px solid #eee;
+      }
+      .logo img {
+        height: 80px;
+      }
+      footer {
+        text-align: center;
+        padding: 20px;
+        color: #888;
+        border-top: 1px solid #eee;
+        margin-top: 100px;
+      }
     </style>
     <script>
+      // Dynamically load shared head
       fetch("assets/head.html")
         .then(response => response.text())
         .then(data => {
@@ -15,28 +63,23 @@
   </head>
 
   <body>
-    <header class="header">
-      <div class="header-inner">
-        <div class="logo">
-          <img src="assets/logo.png" alt="embedEd Consulting logo">
-        </div>
-        <nav class="nav">
-          <a href="index.html" class="active">Home</a>
-          <a href="about.html">About</a>
-          <a href="services.html">Services</a>
-          <a href="contact.html">Contact</a>
-        </nav>
+    <header>
+      <div class="logo">
+        <img src="assets/logo.png" alt="embedEd Consulting Ltd logo">
       </div>
     </header>
 
-    <!-- The rest of your home content here -->
     <main>
       <h1>Curricula for Electronics. Skills for Life.</h1>
-      <p>embedEd Consulting designs and delivers high-quality electronic and embedded systems engineering curricula...</p>
-      <a class="btn" href="services.html">Our Services</a>
+      <p>
+        embedEd Consulting Ltd designs and delivers high-quality electronic and embedded systems engineering curricula 
+        for FE and HE providers. We help institutions modernise programmes, upskill staff, and connect education with 
+        real-world engineering practice.
+      </p>
+      <a href="services.html" class="btn">Our Services</a>
     </main>
 
-    <footer class="footer">© 2025 embedEd Consulting Ltd</footer>
+    <footer>© 2025 embedEd Consulting Ltd</footer>
 
     <script>
       window.addEventListener('load', () => document.body.style.opacity = 1);
