--- a/index.html
+++ b/index.html
@@ -3,24 +3,66 @@
   <head>
     <title>Home — embedEd Consulting Ltd</title>
     <style>
-      body { opacity: 0; transition: opacity 0.3s ease-in; font-family: 'Poppins', sans-serif; margin: 0; }
-      main {
-        text-align: center;
-        padding: 120px 20px;
-        max-width: 800px;
-        margin: 0 auto;
+      body { 
+        opacity: 0; 
+        transition: opacity 0.3s ease-in; 
+        font-family: 'Poppins', sans-serif; 
+        margin: 0; 
       }
+
+      header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 40px;
+        border-bottom: 1px solid #eee;
+      }
+
+      .logo img {
+        height: 70px;
+      }
+
+      nav a {
+        text-decoration: none;
+        color: #0a2342;
+        font-weight: 600;
+        margin-left: 20px;
+        transition: color 0.2s ease;
+      }
+
+      nav a:hover, nav a.active {
+        color: #123b6c;
+      }
+
+      main {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        max-width: 1100px;
+        margin: 80px auto;
+        padding: 0 40px;
+      }
+
+      .text {
+        flex: 1;
+        min-width: 300px;
+        margin-right: 40px;
+      }
+
       h1 {
-        color: #0a2342; /* navy blue */
+        color: #0a2342;
         font-size: 2.5rem;
         margin-bottom: 12px;
       }
+
       p {
         color: #555;
         font-size: 1.1rem;
         margin-bottom: 32px;
         line-height: 1.6;
       }
+
       .btn {
         display: inline-block;
         background-color: #0a2342;
@@ -31,19 +73,22 @@
         text-decoration: none;
         transition: background 0.3s ease;
       }
+
       .btn:hover {
         background-color: #123b6c;
       }
-      header {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 24px;
-        border-bottom: 1px solid #eee;
+
+      .illustration {
+        flex: 1;
+        min-width: 300px;
+        text-align: center;
       }
-      .logo img {
-        height: 80px;
+
+      .illustration img {
+        max-width: 100%;
+        height: auto;
       }
+
       footer {
         text-align: center;
         padding: 20px;
@@ -52,8 +97,9 @@
         margin-top: 100px;
       }
     </style>
+
     <script>
-      // Dynamically load shared head
+      // Dynamically load shared head (favicon, fonts, etc.)
       fetch("assets/head.html")
         .then(response => response.text())
         .then(data => {
@@ -67,16 +113,28 @@
       <div class="logo">
         <img src="assets/logo.png" alt="embedEd Consulting Ltd logo">
       </div>
+      <nav>
+        <a href="index.html" class="active">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </header>
 
     <main>
-      <h1>Curricula for Electronics. Skills for Life.</h1>
-      <p>
-        embedEd Consulting Ltd designs and delivers high-quality electronic and embedded systems engineering curricula 
-        for FE and HE providers. We help institutions modernise programmes, upskill staff, and connect education with 
-        real-world engineering practice.
-      </p>
-      <a href="services.html" class="btn">Our Services</a>
+      <div class="text">
+        <h1>Curricula for Electronics. Skills for Life.</h1>
+        <p>
+          embedEd Consulting Ltd designs and delivers high-quality electronic and embedded systems engineering curricula 
+          for FE and HE providers. We help institutions modernise programmes, upskill staff, and connect education with 
+          real-world engineering practice.
+        </p>
+        <a href="services.html" class="btn">Our Services</a>
+      </div>
+
+      <div class="illustration">
+        <img src="assets/illustration.png" alt="Electronics circuit illustration">
+      </div>
     </main>
 
     <footer>© 2025 embedEd Consulting Ltd</footer>
