--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,9 @@
         </div>
         <nav class="nav">
           <a href="index.html">Home</a>
-          <a href="about.html" class="active">About</a>
+          <a href="about.html">About</a>
           <a href="services.html">Services</a>
-          <a href="contact.html">Contact</a>
+          <a href="contact.html" class="active">Contact</a>
         </nav>
       </div>
     </header>
