--- a/services.html
+++ b/services.html
@@ -26,8 +26,8 @@
         </div>
         <nav class="nav">
           <a href="index.html">Home</a>
-          <a href="about.html" class="active">About</a>
-          <a href="services.html">Services</a>
+          <a href="about.html">About</a>
+          <a href="services.html" class="active">Services</a>
           <a href="contact.html">Contact</a>
         </nav>
       </div>
