--- a/contact.html
+++ b/contact.html
@@ -2,42 +2,68 @@
 <html lang="en">
   <head>
     <title>Contact — embedEd Consulting Ltd</title>
-
-    <!-- Temporary inline style to avoid flash before styles load -->
     <style>
-      body { opacity: 0; transition: opacity .2s ease-in; }
+      body { opacity: 0; transition: opacity 0.3s ease-in; font-family: 'Poppins', sans-serif; margin: 0; }
+      header {
+        display: flex; justify-content: space-between; align-items: center;
+        padding: 20px 40px; border-bottom: 1px solid #eee;
+      }
+      .logo img { height: 70px; }
+      nav a {
+        text-decoration: none; color: #0a2342; font-weight: 600; margin-left: 20px;
+        transition: color 0.2s ease;
+      }
+      nav a:hover, nav a.active { color: #123b6c; }
+      main {
+        max-width: 800px; margin: 80px auto; padding: 0 40px;
+        text-align: center;
+      }
+      h1 {
+        color: #0a2342; font-size: 2rem; margin-bottom: 20px;
+      }
+      p { color: #555; font-size: 1.1rem; margin-bottom: 30px; line-height: 1.6; }
+      .contact-info {
+        display: inline-block; text-align: left; color: #123b6c;
+        font-weight: 600; font-size: 1rem;
+        background: #f8f9fb; padding: 20px 30px; border-radius: 10px;
+      }
+      .contact-info p { margin: 8px 0; }
+      footer {
+        text-align: center; padding: 20px; color: #888; border-top: 1px solid #eee;
+        margin-top: 80px;
+      }
     </style>
-
-    <!-- Inject shared head content (favicon, fonts, CSS) -->
     <script>
       fetch("assets/head.html")
         .then(response => response.text())
-        .then(data => {
-          document.head.insertAdjacentHTML("beforeend", data);
-        });
+        .then(data => { document.head.insertAdjacentHTML("beforeend", data); });
     </script>
   </head>
-
   <body>
-    <header class="header">
-      <div class="header-inner">
-        <div class="logo">
-          <img src="assets/logo.png" alt="embedEd Consulting logo">
-        </div>
-        <nav class="nav">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="services.html">Services</a>
-          <a href="contact.html" class="active">Contact</a>
-        </nav>
-      </div>
+    <header>
+      <div class="logo"><img src="assets/logo.png" alt="embedEd Consulting Ltd logo"></div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html" class="active">Contact</a>
+      </nav>
     </header>
 
-  <main style="max-width:var(--max-width);margin:40px auto;padding:0 24px">
-    <h1 style="font-size:32px;color:var(--navy)">Contact Us</h1>
-    <p style="color:var(--muted);">For enquiries, collaborations, or to discuss curriculum projects, email:</p>
-    <p><a href="mailto:contact@embededconsulting.co.uk">contact@embededconsulting.co.uk</a></p>
-  </main>
-  <footer class="footer">© 2025 embedEd Consulting Ltd</footer>
-</body>
+    <main>
+      <h1>Contact Us</h1>
+      <p>
+        We'd love to hear from you. For collaboration, project enquiries, or training opportunities, please get in touch using the details below.
+      </p>
+
+      <div class="contact-info">
+        <p>📧 <strong>Email:</strong> contact@embededconsulting.co.uk</p>
+        <p>🌐 <strong>Website:</strong> www.embededconsulting.co.uk</p>
+      </div>
+    </main>
+
+    <footer>© 2025 embedEd Consulting Ltd</footer>
+
+    <script>window.addEventListener('load', () => document.body.style.opacity = 1);</script>
+  </body>
 </html>
