--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>embedEd Consulting Ltd</title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <title>Home — embedEd Consulting Ltd</title>
     <style>
-      body {
-        margin: 0;
-        font-family: 'Poppins', sans-serif;
-        background-color: white;
-        color: #0a2342;
-        text-align: center;
-        opacity: 0;
-        transition: opacity 0.3s ease-in;
+      body { 
+        opacity: 0; 
+        transition: opacity 0.3s ease-in; 
+        font-family: 'Poppins', sans-serif; 
+        margin: 0; 
       }
 
       header {
@@ -43,40 +35,58 @@
       }
 
       main {
-        max-width: 900px;
-        margin: 120px auto 60px auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        max-width: 1100px;
+        margin: 80px auto;
         padding: 0 40px;
       }
 
+      .text {
+        flex: 1;
+        min-width: 300px;
+        margin-right: 40px;
+      }
+
       h1 {
-        font-size: 2rem;
-        margin-bottom: 16px;
+        color: #0a2342;
+        font-size: 2.5rem;
+        margin-bottom: 12px;
       }
 
       p {
         color: #555;
-        font-size: 1.05rem;
-        margin-bottom: 40px;
+        font-size: 1.1rem;
+        margin-bottom: 32px;
+        line-height: 1.6;
       }
 
-      .cta-button {
+      .btn {
+        display: inline-block;
         background-color: #0a2342;
         color: white;
-        padding: 14px 32px;
-        text-decoration: none;
-        font-weight: 600;
+        padding: 12px 28px;
         border-radius: 8px;
-        transition: background-color 0.2s ease;
+        font-weight: 600;
+        text-decoration: none;
+        transition: background 0.3s ease;
       }
 
-      .cta-button:hover {
+      .btn:hover {
         background-color: #123b6c;
       }
 
       .illustration {
-        display: block;
-        max-width: 480px;
-        margin: 60px auto 0;
+        flex: 1;
+        min-width: 300px;
+        text-align: center;
+      }
+
+      .illustration img {
+        max-width: 100%;
+        height: auto;
       }
 
       footer {
@@ -84,14 +94,25 @@
         padding: 20px;
         color: #888;
         border-top: 1px solid #eee;
-        margin-top: 80px;
+        margin-top: 100px;
       }
     </style>
+
+    <script>
+      // Dynamically load shared head (favicon, fonts, etc.)
+      fetch("assets/head.html")
+        .then(response => response.text())
+        .then(data => {
+          document.head.insertAdjacentHTML("beforeend", data);
+        });
+    </script>
   </head>
 
   <body>
     <header>
-      <div class="logo"><img src="assets/logo.png" alt="embedEd Consulting Ltd logo"></div>
+      <div class="logo">
+        <img src="assets/logo.png" alt="embedEd Consulting Ltd logo">
+      </div>
       <nav>
         <a href="index.html" class="active">Home</a>
         <a href="about.html">About</a>
@@ -101,13 +122,19 @@
     </header>
 
     <main>
-      <h1>Empowering Electronic & Embedded Systems Education</h1>
-      <p>
-        embedEd Consulting Ltd supports FE and HE institutions in delivering modern, 
-        industry-aligned electronic and embedded systems engineering education.
-      </p>
-      <a href="services.html" class="cta-button">Our Services</a>
-      <img src="assets/illustration.png" alt="Electronics circuit illustration" class="illustration">
+      <div class="text">
+        <h1>Empowering Electronic & Embedded Systems Engineering Education</h1>
+        <p>
+          embedEd Consulting Ltd designs and delivers high-quality electronic and embedded systems engineering curricula 
+          for FE and HE providers. We help institutions modernise programmes, upskill staff, and connect education with 
+          real-world engineering practice.
+        </p>
+        <a href="services.html" class="btn">Leran more</a>
+      </div>
+
+      <div class="illustration">
+        <img src="assets/illustration.png" alt="Electronics circuit illustration">
+      </div>
     </main>
 
     <footer>© 2025 embedEd Consulting Ltd</footer>
