Polish website content and SEO meta tags

--- a/assets/head.html
+++ b/assets/head.html
@@ -1,6 +1,11 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="embedEd Consulting Ltd — electronic and embedded systems curriculum design, delivery support, staff training, and industry-aligned engineering education consultancy for FE and HE providers.">
 <link rel="icon" type="image/x-icon" href="assets/favicon.ico?v=1" />
 <link rel="shortcut icon" href="assets/favicon.ico?v=1" type="image/x-icon" />
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
 <link rel="stylesheet" href="assets/styles.css" />
+<meta property="og:title" content="embedEd Consulting Ltd">
+<meta property="og:description" content="Specialist electronic and embedded systems curriculum design and consulting.">
+<meta property="og:image" content="assets/logo.png">
+
