--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           for FE and HE providers. We help institutions modernise programmes, upskill staff, and connect education with 
           real-world engineering practice.
         </p>
-        <a href="services.html" class="btn">Leran more</a>
+        <a href="services.html" class="btn">Learn more</a>
       </div>
 
       <div class="illustration">
